# TinyProjects

./: .gitignore  README.md
algorithms/: CMakeLists.txt  README.md  main.c
algorithms/linked_list/: base.h  list.c  list.h
concurrency/: CMakeLists.txt  Main.cpp  README.md
concurrency/atomic/: Atomic.c  Atomic.h  Atomic.hpp  AtomicI64.hpp  README.md  atomic_i64.hpp
concurrency/atomic/impl/: atomic_i64.c
concurrency/mutex/: SpinLock.hpp
concurrency/thread/thread_pool/: ThreadPool.cpp  ThreadPool.hpp
linux_utils/: README.md
linux_utils/locateof/: .gitignore  CMakeLists.txt  README.md
linux_utils/locateof/src/: enviroment.h  main.c  utils.h
